@startuml

title __IMPL's Class Diagram__\n

  namespace com.aaron.justlike {
    namespace common {
      namespace impl {
        abstract class com.aaron.justlike.common.impl.ObserverImpl {
            + onComplete()
            + onError()
            + onNext()
            + onSubscribe()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace impl {
        class com.aaron.justlike.common.impl.SquareItemDecoration {
            - SquareItemDecoration()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace impl {
        class com.aaron.justlike.common.impl.SquareItemDecoration.XItemDecoration {
            + getItemOffsets()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace impl {
        class com.aaron.justlike.common.impl.SquareItemDecoration.YItemDecoration {
            + getItemOffsets()
        }
      }
    }
  }
  

  com.aaron.justlike.common.impl.ObserverImpl .up.|> io.reactivex.Observer
  com.aaron.justlike.common.impl.SquareItemDecoration +-down- com.aaron.justlike.common.impl.SquareItemDecoration.XItemDecoration
  com.aaron.justlike.common.impl.SquareItemDecoration +-down- com.aaron.justlike.common.impl.SquareItemDecoration.YItemDecoration
  com.aaron.justlike.common.impl.SquareItemDecoration.XItemDecoration -up-|> androidx.recyclerview.widget.RecyclerView.ItemDecoration
  com.aaron.justlike.common.impl.SquareItemDecoration.YItemDecoration -up-|> androidx.recyclerview.widget.RecyclerView.ItemDecoration


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
